--- a/src/app/employees/employee-list/employee-list.component.html
+++ b/src/app/employees/employee-list/employee-list.component.html
@@ -1,11 +1,13 @@
-
 <div class=" text-center">
-  <button (click)="openRegForm()"   matTooltip="Add a new User to the system"
-  aria-label="Button that displays a tooltip when focused or hovered over" type="button" class="btn btn-primary" style="margin-right: auto; margin-left: auto;">
+  <button (click)="openRegForm()" matTooltip="Add a new User to the system"
+    aria-label="Button that displays a tooltip when focused or hovered over" type="button" class="btn btn-primary"
+    style="margin-right: auto; margin-left: auto;">
     Add a new User</button>
 </div>
+
 <br>
 <hr>
+
 <h4 class="text-center">Select a user to login</h4>
 
 <br>
@@ -48,11 +50,13 @@
       <div class="card-body">
         <table class="table">
           <tr class="table-hover grab tbl1 text-center">
-            <button type="button"   matTooltip="Click to login"
-            aria-label="Button that displays a tooltip when focused or hovered over" class="btn btn-success" (click)="populateForm(emp)" >Login</button>
+            <button type="button" matTooltip="Click to login"
+              aria-label="Button that displays a tooltip when focused or hovered over" class="btn btn-success"
+              (click)="populateForm(emp)">Login</button>
 
-            <button type="button"   matTooltip="Delete user from the system"
-            aria-label="Button that displays a tooltip when focused or hovered over" class="btn btn-danger" (click)="onDelete(emp.EmployeeID)">Delete</button></tr>
+            <button type="button" matTooltip="Delete user from the system"
+              aria-label="Button that displays a tooltip when focused or hovered over" class="btn btn-danger"
+              (click)="onDelete(emp.EmployeeID)">Delete</button></tr>
         </table>
       </div>
 
